@@ -164,7 +164,8 @@ cfg={
                             "push":"git push",
                             "add":"git add $#files#$",
                             "rm":"git rm -rf $#files#$",
-                            "commit":"git commit *"
+                            "commit":"git commit *",
+                            "version":"git --version"
                            }
                    },
 
